--- a/src/SearchRecipes/SearchTab.css
+++ b/src/SearchRecipes/SearchTab.css
@@ -1,9 +1,18 @@
 .handwritten{
     font-family: 'Lucida Grande', 'Lucida Sans Unicode';
-    font-size:1rem;
+    text-align: center;
+    font-size: large;
+    font-weight: 600;
 }
 
-a {
+.form-group-search{
+    border-color: none;
+    background-color: rgb(151, 222, 116);
+    align-items: center;
+    border-radius: 8px;
+}
+
+a{
     text-decoration: none; 
     display: flex;  
 }
@@ -11,6 +20,11 @@ a {
 .card-title{
     margin-bottom: 0;
     padding-bottom: 0;
+}
+
+.search-input{
+    min-width: 300px;
+    border-radius: 8px;
 }
 
 .title{
@@ -37,8 +51,6 @@ a {
     color: rgb(115, 115, 115);
     font-style: italic;
     font-size:x-small;
-    /* display: block;
-    text-align: right; */
     display: flex;
     justify-content: right; 
     
