--- a/src/User/Userpage.css
+++ b/src/User/Userpage.css
@@ -3,8 +3,6 @@
     background-color: rgb(239, 216, 187);
 }
 
-
-
 img.big-user-img{
     height: 80px;
     width: 80px;
@@ -14,16 +12,19 @@ img.big-user-img{
     position: relative;
 }
 
-
-
-.text-center {
+.recipes-info {
     font-weight: 900;
     font-size: xx-large;
+
+}
+
+.big-number{
+    text-align: end;
 }
 
 .title-1{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.9rem;
+    font-size: larger;
     font-weight: 700; 
 }
 
